实现删除repo中chart的功能
