# controllers/store.go
@@ -95,6 +95,13 @@ func (this *StoreController) ListAllRepos() {
 // @Failure 500
 // @router /repos/group/:group [Post]
 func (this *StoreController) AddRepo() {
+	/*
+		{
+			  "name": "test",
+			  "url": "https://kubernetes-charts.storage.googleapis.com"
+		}
+
+	*/
 	group := this.Ctx.Input.Param(":group")
 
 	if this.Ctx.Input.RequestBody == nil {
@@ -107,6 +114,10 @@ func (this *StoreController) AddRepo() {
 	err := json.Unmarshal(this.Ctx.Input.RequestBody, &param)
 	if err != nil {
 		this.errReturn(err, 500)
+		return
+	}
+	if strings.TrimSpace(param.URL) == "" {
+		this.errReturn("must specify valid url", 500)
 		return
 	}
 
@@ -178,7 +189,7 @@ func (this *StoreController) UpdateRepo() {
 
 // 获取指定repo的Charts
 // @Title 仓库
-// @Description
+// @Description 获取指定repo的Charts
 // @Param Token header string true 'Token'
 // @Param group path string true "组名"
 // @Param repo path string true "仓库名"
@@ -198,23 +209,48 @@ func (this *StoreController) ListCharts() {
 	this.normalReturn(rets)
 }
 
+// 获取指定repo的Chart的嘻嘻你
+// @Title 仓库
+// @Description 获取指定repo的Chart
+// @Param Token header string true 'Token'
+// @Param group path string true "组名"
+// @Param repo path string true "仓库名"
+// @Param chart path string true "报名"
+// @Success 201 {string}  success!
+// @Failure 500
+// @router /repo/:repo/group/:group/chart/:chart [Get]
+func (this *StoreController) GetChart() {
+	group := this.Ctx.Input.Param(":group")
+	repo := this.Ctx.Input.Param(":repo")
+	chart := this.Ctx.Input.Param(":chart")
+
+	rets, err := charts.GetChart(group, repo, chart)
+	if err != nil {
+		this.errReturn(err, 500)
+		return
+	}
+
+	this.normalReturn(rets)
+}
+
 // 获取指定repo的Chart
 // @Title 仓库
-// @Description
+// @Description 获取指定repo的Chart
 // @Param Token header string true 'Token'
 // @Param group path string true "组名"
 // @Param repo path string true "仓库名"
 // @Param chart path string true "模板"
-// @Param version query string false  "指定版本"
+// @Param version path string false  "指定版本"
 // @Success 201 {string}  success!
 // @Failure 500
-// @router /repo/:repo/group/:group/chart/:chart [Get]
+// @router /repo/:repo/group/:group/chart/:chart/version/:version [Get]
 func (this *StoreController) InspectChart() {
 	group := this.Ctx.Input.Param(":group")
 	repo := this.Ctx.Input.Param(":repo")
 	chart := this.Ctx.Input.Param(":chart")
-	version := this.GetString("version")
-	keyring := "/home/wwh/.gnupg/pubring.gpg"
+	version := this.Ctx.Input.Param(":version")
+	//	keyring := "/home/wwh/.gnupg/pubring.gpg"
+	keyring := ""
 
 	//home := store.Home()
 	ch, err := charts.InspectChart(group, repo, chart, &version, keyring)
@@ -228,20 +264,20 @@ func (this *StoreController) InspectChart() {
 
 // 获取指定repo的Chart的模板
 // @Title 仓库
-// @Description
+// @Description 获取指定repo的Chart的模板
 // @Param Token header string true 'Token'
 // @Param group path string true "组名"
 // @Param repo path string true "仓库名"
 // @Param chart path string true "模板"
-// @Param version query string false  "指定版本"
+// @Param version path string false  "指定版本"
 // @Success 201 {string}  success!
 // @Failure 500
-// @router /repo/:repo/group/:group/chart/:chart/templates [Get]
+// @router /repo/:repo/group/:group/chart/:chart/version/:version/templates [Get]
 func (this *StoreController) GetChartTemplate() {
 	group := this.Ctx.Input.Param(":group")
 	repo := this.Ctx.Input.Param(":repo")
 	chart := this.Ctx.Input.Param(":chart")
-	version := this.GetString("version")
+	version := this.Ctx.Input.Param(":version")
 	//	keyring := "/home/wwh/.gnupg/pubring.gpg"
 	keyring := ""
 
@@ -265,20 +301,20 @@ func (this *StoreController) GetChartTemplate() {
 
 // 获取指定repo的Chart的配置
 // @Title 仓库
-// @Description
+// @Description 获取指定repo的Chart的配置
 // @Param Token header string true 'Token'
 // @Param group path string true "组名"
 // @Param repo path string true "仓库名"
 // @Param chart path string true "模板"
-// @Param version query string false  "指定版本"
+// @Param version path string false  "指定版本"
 // @Success 201 {string}  success!
 // @Failure 500
-// @router /repo/:repo/group/:group/chart/:chart/values [Get]
+// @router /repo/:repo/group/:group/chart/:chart/version/:version/values [Get]
 func (this *StoreController) GetChartValue() {
 	group := this.Ctx.Input.Param(":group")
 	repo := this.Ctx.Input.Param(":repo")
 	chart := this.Ctx.Input.Param(":chart")
-	version := this.GetString("version")
+	version := this.Ctx.Input.Param(":version")
 	//	keyring := "/home/wwh/.gnupg/pubring.gpg"
 	keyring := ""
 
@@ -302,21 +338,21 @@ func (this *StoreController) GetChartValue() {
 
 // 获取指定repo的解析后的chart
 // @Title 仓库
-// @Description
+// @Description 获取指定repo的解析后的chart
 // @Param Token header string true 'Token'
 // @Param group path string true "组名"
 // @Param repo path string true "仓库名"
 // @Param chart path string true "模板"
-// @Param version query string false  "指定版本"
+// @Param version path string false  "指定版本"
 // @Param body body models.ChartParseArgs true "解析参数"
 // @Success 201 {string}  success!
 // @Failure 500
-// @router /repo/:repo/group/:group/chart/:chart/resource [Post]
+// @router /repo/:repo/group/:group/chart/:chart/version/:version/resource [Post]
 func (this *StoreController) GetChartParsed() {
 	group := this.Ctx.Input.Param(":group")
 	repo := this.Ctx.Input.Param(":repo")
 	chart := this.Ctx.Input.Param(":chart")
-	version := this.GetString("version")
+	version := this.Ctx.Input.Param(":version")
 	//	keyring := "/home/wwh/.gnupg/pubring.gpg"
 	keyring := ""
 
@@ -350,4 +386,30 @@ func (this *StoreController) GetChartParsed() {
 	}
 
 	this.normalReturn(b.String())
+}
+
+// 删除指定repo的Chart
+// @Title 仓库
+// @Description 删除指定repo的Chart
+// @Param Token header string true 'Token'
+// @Param group path string true "组名"
+// @Param repo path string true "仓库名"
+// @Param chart path string true "包名"
+// @Param version query string false  "指定版本"
+// @Success 201 {string}  success!
+// @Failure 500
+// @router /repo/:repo/group/:group/chart/:chart [Delete]
+func (this *StoreController) DeleteChart() {
+	group := this.Ctx.Input.Param(":group")
+	repo := this.Ctx.Input.Param(":repo")
+	chart := this.Ctx.Input.Param(":chart")
+	version := this.GetString("version")
+
+	err := charts.DeleteChart(group, repo, chart, &version, "")
+	if err != nil {
+		this.errReturn(err, 500)
+		return
+	}
+
+	this.normalReturn("ok")
 }
